src/index.scss
// * { outline: 1px solid red; }

body
{
	display: flex;
	flex-direction: column;
	overflow: hidden;
	height: 100vh;
}

#title-bar
{
	flex-basis: 50px;
    // border-bottom: 1px solid #d0d0d0;
    -webkit-app-region: drag;
    -webkit-user-select: none;
    user-select: none;
	display: flex;
	align-items: center;
	justify-content: center;

	input
	{
		-webkit-app-region: none;
		-webkit-user-select: auto;
		user-select: auto;
		max-width: 300px;
		text-align: center;

	}
}

.content
{
	flex: 1;
	overflow: auto;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: .5rem;
}

.viewer
{
	flex-grow: 1;
	display: flex;
	justify-content: space-between;

	.photo
	{
		flex-grow: 1;
		background-size: contain;
		background-repeat: no-repeat;
		background-position: center;
	}
}

.thumbnail-container
{
	flex-grow: 0;
	display: flex;
	gap: 5px;
	overflow-x: scroll;
	height: 105px;
	scroll-behavior: smooth;

	.thumbnail
	{
		height: 100%;
		width: auto;
		border: 1px solid transparent;
		padding: 2px;
		border-radius: 5px;

		// TODO: rename to "current"
		&.active
		{
			border-color: purple;
		}
	}
}

